<resources>
    <string name="app_name">News_Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aljazera">Aljazera</string>
    <string name="fox_news">Fox News</string>
    <string name="sky">SKY</string>
    <string name="bbc">BBC</string>
    <string name="new_york_times">New York Times</string>
    <string name="cnn">CNN</string>
    <string name="sky_news">Sky News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fox">Fox News</string>
    <string name="skys">Sky News</string>
</resources>