<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljijazera"
            android:title="@string/aljazera"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnnwhite"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/foxNewsFreagment"
            android:icon="@drawable/foxnews"
            android:title="@string/fox_news"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/skyNewFragment"
            android:icon="@drawable/sky"
            android:title="@string/sky_news"
            android:menuCategory="secondary"/>
    </group>
    <item android:title="UpComing"
        android:menuCategory="secondary">
        <menu>
            <item android:id="@+id/nyk"
                 android:icon="@drawable/nyk"
                android:title="@string/new_york_times"
                android:menuCategory="secondary"/>
        </menu>
    </item>

</menu>